Changed the block "Additional services".
Adjusted the display of different photos depending on the screen resolution.
Added the "Additional Services" block to the final product page.

--- a/css/style.css
+++ b/css/style.css
@@ -799,6 +799,9 @@ ul {
     .h2__title {
         font-size: 36px;
     }
+    .h2_end-product {
+        margin-top: 50px;
+    }
     .title-underline {
         width: 46px;
     }
