--- a/css/style.css
+++ b/css/style.css
@@ -1298,6 +1298,74 @@ ul {
         height: 40px !important;
     }
 }
+/********************************
+************ Contacts ************
+*********************************/
+.contacts-img__image {
+    width: 100%;
+}
+.contacts-list {
+    margin-top: 20px;
+}
+.cotacts-item {
+    list-style: none;
+    margin-bottom: 15px;
+}
+.cotacts-item__title {
+    font-size: 20px;
+    display: block;
+}
+.cotacts-item__text {
+    display: block;
+}
+.cotacts-item__link {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+}
+.cotacts-item__link:hover {
+    text-decoration: underline;
+}
+
+@media (min-width: 768px) {
+    .contacts_wrap {
+        display: flex;
+        margin-left: -12px;
+        margin-right: -12px;
+    }
+    .contacts-img {
+        width: 50%;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+    .contacts-info {
+        width: 50%;
+        padding-left: 12px;
+        padding-right: 12px;
+    }
+    .contacts-list {
+        margin-top: 0px;
+    }
+}
+@media (min-width: 1200px) {
+    .contacts-list {
+        margin-top: 0px;
+    }
+    .cotacts-item {
+        margin-bottom: 20px;
+    }
+    .cotacts-item__title {
+        font-size: 22px;
+    }
+    .cotacts-item__link {
+        font-size: 18px;
+    }
+    .cotacts-item__text {
+        margin-top: 7px;
+    }
+}
 
 /********************************
 ************ Footer ************
