--- a/css/style.css
+++ b/css/style.css
@@ -684,13 +684,19 @@ ul {
         height: 760px;
     }
     .header_home-page {
-        background-image: url('../img/manufacturing_process_1200x760.jpg');
+        /* background-image: url('../img/manufacturing_process_1200x760.jpg'); */
+        background: url('../img/header_shadow.png') 0 0 repeat-x,
+        url('../img/manufacturing_process_1200x760.jpg') center/cover no-repeat;
     }
     .header_category-page {
-        background-image: url('../img/belt_category_1200x760.jpg');
+        /* background-image: url('../img/belt_category_1200x760.jpg'); */
+        background: url('../img/header_shadow.png') 0 0 repeat-x,
+        url('../img/belt_category_1200x760.jpg') center/cover no-repeat;
     }
     .header_blog-page {
-        background-image: url('../img/blog_1200x760_2.jpg');
+        /* background-image: url('../img/blog_1200x760_2.jpg'); */
+        background: url('../img/header_shadow.png') 0 0 repeat-x,
+        url('../img/blog_1200x760_2.jpg') center/cover no-repeat;
     }
     /* .header {
         background: url('../img/header_shadow.png') 0 0 repeat-x,
@@ -775,7 +781,7 @@ ul {
     }
     .sub-nav__item-link:hover {
         /* background-color: #282828; */
-        background-color: #0D0D0D;
+        background-color: #0d0d0d;
     }
     body.mouse .nav__item:hover .sub-nav__list {
         display: block !important;
@@ -1145,7 +1151,7 @@ ul {
     line-height: 110%;
     text-transform: uppercase;
     color: #ffffff;
-    background-color:#d78e36;
+    background-color: #d78e36;
     border: none;
     padding: 10px 15px;
     margin-top: 20px;
@@ -1270,7 +1276,6 @@ ul {
         width: 96px;
         height: 64px;
     }
-
 }
 
 @media (min-width: 1200px) {
@@ -1351,7 +1356,6 @@ ul {
     text-decoration: underline;
 }
 
-
 .delivery__item {
     margin-left: 20px;
 }
@@ -1410,7 +1414,127 @@ ul {
         margin-top: 7px;
     }
 }
-
+/********************************
+************ Blog ************
+*********************************/
+.blog-list {
+    list-style: none;
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -12px;
+    margin-right: -12px;
+    margin-bottom: -24px;
+}
+.blog-item {
+    width: 50%;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-bottom: 24px;
+}
+.blog-item__link {
+    text-decoration: none;
+    color: #fff;
+    font-size: 12px;
+}
+.blog-item__img {
+    width: 100%;
+    display: block;
+    transition: 0.5s;
+}
+.blog-item__title {
+    font-family: 'Cuprum';
+    font-weight: 400;
+    font-style: normal;
+    font-size: 20px;
+    margin-top: 10px;
+}
+.product-item__aticle {
+    margin-top: 5px;
+    line-height: 16px;
+}
+.blog-item__author-wrap {
+    margin-top: 10px;
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+.blog-item__author-txt-wrap {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: 'Cuprum';
+    font-weight: 400;
+    font-style: normal;
+    text-align: right;
+}
+.blog-item__author-img {
+    width: 35px;
+}
+.blog-item__date {
+    margin-top: 2px;
+}
+.blog-item__link:hover .blog-item__img {
+    transform: scale(1.2);
+}
+.blog-item__img-wrap {
+    overflow: hidden;
+}
+@media (min-width: 768px) {
+    .blog-item {
+        width: calc(100% / 3);
+    }
+    .blog-item__title {
+        font-size: 22px;
+    }
+    .product-item__aticle {
+        line-height: 16px;
+    }
+    .blog-item__link {
+        font-size: 14px;
+    }
+    .blog-item__author-txt-wrap {
+        font-size: 15px;
+    }
+}
+@media (min-width: 1200px) {
+    .blog-list {
+        margin-left: -15px;
+        margin-right: -15px;
+        margin-bottom: -30px;
+    }
+    .blog-item {
+        padding-left: 15px;
+        padding-right: 15px;
+        padding-bottom: 30px;
+    }
+    .blog-item__title {
+        font-size: 24px;
+    }
+    .blog-item__author-img {
+        width: 51px;
+    }
+    .blog-item__link {
+        font-size: 16px;
+    }
+    .product-item__aticle {
+        line-height: 20px;
+    }
+    .blog-item__author-wrap {
+        margin-top: 10px;
+        display: flex;
+        justify-content: space-between;
+        align-items: stretch;
+    }
+    .blog-item__author-txt-wrap {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+    }
+    .blog-item__date {
+        margin-left: 20px;
+    }
+}
 /********************************
 ************ Footer ************
 *********************************/
